# afap-portfolio-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
notebooks/: 01_insights_comerciales.ipynb
scripts/: capturar_screenshots.py
sql/: 01_kpis_globales.sql  02_pareto_cartera.sql  03_fuga_por_segmento.sql  04_top_riesgo_afiliados.sql
src/: analytics.py  data_loader.py  reporting.py
src/models/: __init__.py  churn_logit.py
tests/: conftest.py  test_analytics.py  test_data_loader.py  test_models.py  test_reporting.py  test_sql_parity.py
