[project]
name = "afap-portfolio-analytics"
version = "0.1.0"
description = "Demo end-to-end de analítica comercial sobre cartera de afiliados AFAP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=1.0.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.20.0",
    "streamlit>=1.36.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Instala el paquete en modo editable (`pip install -e`) para que los
# cambios en src/ se reflejen sin reinstalación manual.
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
]
